Fixing semantic gap on configuration DataOut option

--- a/IcyPick.Fetcher/appsettings.json
+++ b/IcyPick.Fetcher/appsettings.json
@@ -2,6 +2,6 @@
   "IcyVeins": {
     "BaseUrl": "https://www.icy-veins.com/heroes/"
   },
-  "DataOut": "",
+  "DataOut": "data.json",
   "ImagesOutDir": "images"
 }
