--- a/Icypick.Ui/package.json
+++ b/Icypick.Ui/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
