--- a/Icypick.Ui/package.json
+++ b/Icypick.Ui/package.json
@@ -50,7 +50,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "@typescript-eslint/no-use-before-define": "off"
+    },
     "overrides": [
       {
         "files": [
